; ModuleID = '/home/carl/AnghaBench/goaccess/src/extr_json.c_pskeysval.c'
source_filename = "/home/carl/AnghaBench/goaccess/src/extr_json.c_pskeysval.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [20 x i8] c"%.*s\22%s\22: \22%s\22,%.*s\00", align 1
@TAB = common dso_local global i32 0, align 4
@nlines = common dso_local global i32 0, align 4
@NL = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [15 x i8] c"%.*s\22%s\22: \22%s\22\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8*, i8*, i32, i32)* @pskeysval to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pskeysval(i32* %0, i8* %1, i8* %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i8* %1, i8** %7, align 8
  store i8* %2, i8** %8, align 8
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %11 = load i32, i32* %10, align 4
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %22, label %13

13:                                               ; preds = %5
  %14 = load i32*, i32** %6, align 8
  %15 = load i32, i32* %9, align 4
  %16 = load i32, i32* @TAB, align 4
  %17 = load i8*, i8** %7, align 8
  %18 = load i8*, i8** %8, align 8
  %19 = load i32, i32* @nlines, align 4
  %20 = load i32, i32* @NL, align 4
  %21 = call i32 (i32*, i8*, i32, i32, i8*, i8*, ...) @pjson(i32* %14, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0), i32 %15, i32 %16, i8* %17, i8* %18, i32 %19, i32 %20)
  br label %29

22:                                               ; preds = %5
  %23 = load i32*, i32** %6, align 8
  %24 = load i32, i32* %9, align 4
  %25 = load i32, i32* @TAB, align 4
  %26 = load i8*, i8** %7, align 8
  %27 = load i8*, i8** %8, align 8
  %28 = call i32 (i32*, i8*, i32, i32, i8*, i8*, ...) @pjson(i32* %23, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.1, i64 0, i64 0), i32 %24, i32 %25, i8* %26, i8* %27)
  br label %29

29:                                               ; preds = %22, %13
  ret void
}

declare dso_local i32 @pjson(i32*, i8*, i32, i32, i8*, i8*, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
